--- a/www/cyber-style.css
+++ b/www/cyber-style.css
@@ -182,6 +182,7 @@ aside{
 }
 .notif{
     display: flex;
+    overflow-y: hidden;
     
     /*Aligner les éléments (enfants)*/
     justify-content: center;
@@ -192,7 +193,8 @@ aside{
     
     /*Longueur et largeur*/
     width: 18vw;
-    height: 40vh;
+    height: 50vh;
+    max-height: 50vh;
     
     /*Bordures*/
     border-radius: 3vh;
@@ -203,8 +205,7 @@ aside{
     padding-top: 7.5vh;
     display: flex;
     flex-wrap: wrap;
-    overflow-y: scroll;
-    overflow-x: hidden;
+
 
     /*Aligner les éléments (enfants)*/
     justify-content: space-between;
